@@ -1,6 +1,8 @@
 			   XPCE ChangeLog
 			   ==============
 
+* FIXED: Bug#21: wrong computation of window<-visible.  Holger Kanwischer.
+
 * FIXED: Bug#23.  Menu selection handling.  Holger Kanwischer.
 
 VERSION 6.5.8, distributed with SWI-Prolog 5.5.8
